--- a/CSManagement/CSManagement/Views/ComputerEquipments/Index.cshtml
+++ b/CSManagement/CSManagement/Views/ComputerEquipments/Index.cshtml
@@ -28,8 +28,8 @@
                     <th style="text-align:center">@Html.DisplayNameFor(model => model.CE_Name)</th>
                     <th style="text-align:center">@Html.DisplayNameFor(model => model.CE_Noce)</th>
                     <th style="text-align:center">@Html.DisplayNameFor(model => model.CE_Piece)</th>
-                    <th style="text-align:center">@Html.DisplayNameFor(model => model.CE_Status)</th>
                     <th style="text-align:center">ผู้เบิก</th>
+                    <th style="text-align:center">@Html.DisplayNameFor(model => model.CE_Status)</th>
                     <th style="text-align:center">จัดการข้อมูล</th>
                 </tr>
             </thead>
@@ -43,14 +43,49 @@
                         <td>@Html.DisplayFor(modelItem => item.CE_Name)</td>
                         <td style="text-align:center">@Html.DisplayFor(modelItem => item.CE_Noce)</td>
                         <td style="text-align:center">@Html.DisplayFor(modelItem => item.CE_Piece)</td>
-                        <td style="text-align:center">@Html.DisplayFor(modelItem => item.CE_Status)</td>
                         <td>@Html.DisplayFor(modelItem => item.Teacher.Tea_Name)</td>
-                        <td class="text-center">
-                            @*<a class="btn btn-warning" href="@Url.Action("Edit", "ComputerEquipment", new { id = item.CE_ATNO })"><i class="fa fa-edit"></i>แก้ไข</a>*@
-                            <a class="btn btn-info" href="@Url.Action("Details", "ComputerEquipments", new { id = item.CE_ATNO })"><i class="fa fa-list-ul"></i> รายละเอียด</a>
-                            @*<a class="btn btn-danger" href="@Url.Action("Delete", "ComputerEquipment", new { id = item.CE_ATNO })"><i class="fa  fa-trash-o"></i> ลบ</a>*@
-                            @*<a href='@Url.Action("Dispose", "Disposes", new { id = item.CE_ATNO })' class="btn btn-default btn-flat">จำหน่าย</a>*@
+                        <td>
+                            @if (item.CE_Status == 1)
+                            {
+                                <span style="color:green">
+                                    อยู่ในระบบ
+                                </span>
+                            }
+                            else if (item.CE_Status == 2)
+                            {
+                                <span style="color:red">
+                                    จำหน่ายแล้ว
+                                </span>
+                            }
+                            else if (item.CE_Status == 3)
+                            {
+                                <span style="color:blue">
+                                    รอจำหน่าย
+                                </span>
+                            }
                         </td>
+
+                        @if (item.CE_Status == 1)
+                        {
+                            <td>
+                                @Html.ActionLink("Edit", "Edit", new { id = item.CE_ATNO }) |
+                                @Html.ActionLink("Details", "Details", new { id = item.CE_ATNO }) |
+                                @Html.ActionLink("Delete", "Delete", new { id = item.CE_ATNO }) |
+                                @Html.ActionLink("จำหน่าย", "Dispose", new { id = item.CE_ATNO })
+                            </td>
+                        }
+                        else if (item.CE_Status == 2)
+                        {
+                            <td>
+                                @Html.ActionLink("Details", "Details", new { id = item.CE_ATNO })
+                            </td>
+                        }
+                        else if (item.CE_Status == 3)
+                        {
+                            <td>
+                                @Html.ActionLink("Details", "Details", new { id = item.CE_ATNO })
+                            </td>
+                        }
                     </tr>
                 }
             </tbody>
