--- a/CSManagement/CSManagement/Views/Home/IndexUser.cshtml
+++ b/CSManagement/CSManagement/Views/Home/IndexUser.cshtml
@@ -6,116 +6,94 @@
     Layout = "~/Views/Shared/_LayoutUser.cshtml";
 }
 
-<section class="content">
-    <div class="box-default">
-        <div id="myCarousel" class="carousel slide" data-ride="carousel">
-            <!-- Indicators -->
-            <ol class="carousel-indicators">
-                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                <li data-target="#myCarousel" data-slide-to="1"></li>
-                <li data-target="#myCarousel" data-slide-to="2"></li>
-            </ol>
+<body>
+    <section class="content">
+        <div class="box-default">
+            <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                <!-- Indicators -->
+                <ol class="carousel-indicators">
+                    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                    <li data-target="#myCarousel" data-slide-to="1"></li>
+                    <li data-target="#myCarousel" data-slide-to="2"></li>
+                </ol>
 
-            <!-- Wrapper for slides -->
-            <div class="carousel-inner" role="listbox">
-                <div class="item active">
-                    <img src="~/img/present1.png" alt="New York" width="1200" height="700">
+                <!-- Wrapper for slides -->
+                <div class="carousel-inner" role="listbox">
+                    <div class="item active">
+                        <img src="~/imgSlideShow/present1.png" style="width:100%;height:100%">
+                    </div>
+
+                    <div class="item">
+                        <img src="~/img/h1.jpg" style="width:100%;height:100%">
+                    </div>
+
+                    <div class="item">
+                        <img src="~/img/h4.jpg" style="width:100%;height:100%">
+                    </div>
                 </div>
 
-                <div class="item">
-                    <img src="~/img/h1.jpg" alt="Chicago" width="1200" height="700">
-                </div>
-
-                <div class="item">
-                    <img src="~/img/h4.jpg" alt="Los Angeles" width="1200" height="700">
-                </div>
-            </div>
-
-            <!-- Left and right controls -->
-            <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
-        </div>
-    </div>
-
-    <div class="box-default">
-        <div class="card-body">
-            <div class="row" style="padding:15px">
-                <div class="card col-lg-3">
-                    <img src="~/img/logo1.png" alt="Avatar" style="width:100%" />
-                </div>
-
-                <div class="card col-lg-3">
-                    <img src="~/img/logo2.png" alt="Avatar" style="width:100%">
-                </div>
-
-                <div class="card col-lg-3">
-                    <img src="~/img/logo3.png" alt="Avatar" style="width:100%">
-                </div>
-
-                <div class="card col-lg-3">
-                    <a hr="http://register.kru.ac.th/reg/"><img src="~/img/logo4.png" alt="Avatar" style="width:100%"/></a>
-                </div>
+                <!-- Left and right controls -->
+                <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+                    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+                    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
             </div>
         </div>
 
-        <div class="row">
-            <div class="col-md-6">
-                <div class="box box-danger">
-                    <div class="box-header with-border set-text">
-                        <h3 class="box-title" style="letter-spacing:0px">สัดส่วนหมวดวิชาหลักสูตรสาขา</h3>
+        <div class="box-default">
+            <div class="card-body">
+                <div class="row" style="padding:15px">
+                    <div class="card col-lg-3">
+                        <img src="~/img/logo1.png" style="width:100%;box-shadow: 5px 5px 5px #d9d9d9" />
                     </div>
-                    <div class="box-body chart-responsive">
-                        <div class="chart" id="chartContainer" style="height: 300px; position: relative;"></div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="box box-danger">
-                    <div class="box-header with-border set-text">
-                        <h3 class="box-title" style="letter-spacing:0px">สัดส่วนการเข้าทำงานของศิษย์เก่า</h3>
-                    </div>
-                    <div class="box-body chart-responsive">
-                        <div class="chart" id="chartContainer2" style="height: 300px; position: relative;"></div>
-                    </div>
-                </div>
-            </div>
-        </div>
 
-        <p class="page-header text-center" style="font-size:40px"><i class="fa fa-star"></i>ผลงานนักศึกษา<i class="fa fa-star"></i></p>
-        <div class="row">
-            <div class="col-md-4">
-                <div class="box box-widget widget-user-2">
-                    <div class="widget-user-header bg-yellow">
-                        <div class="widget-user-image">
-                            <img class="img-circle" img src="~/img/icons8-cat-profile-64.png" />
-                        </div><h3 class="widget-user-username" style="letter-spacing:0px">นางสาวญาณี วงค์ตันฮวด</h3>
-                        <h5 class="widget-user-desc">จัดการข้อมูลสาขาวิทยาการคอมพิวเตอร์</h5>
+                    <div class="card col-lg-3">
+                        <img src="~/img/logo2.png" style="width:100%;box-shadow: 5px 5px 5px #d9d9d9">
                     </div>
-                    <div class="box-footer no-padding">
-                        <ul class="nav nav-stacked">
-                            <li><a href="#">เว็บไซต์<span class="pull-right badge bg-blue">เข้าชม</span></a></li>
-                            <li><a href="#">รูปเล่ม<span class="pull-right badge bg-aqua">เข้าชม</span></a></li>
-                            <li><a href="#">วีดีโอ<span class="pull-right badge bg-green">เข้าชม</span></a></li>
-                        </ul>
+
+                    <div class="card col-lg-3">
+                        <img src="~/img/logo3.png" style="width:100%;box-shadow: 5px 5px 5px #d9d9d9">
+                    </div>
+
+                    <div class="card col-lg-3">
+                        <a href="http://register.kru.ac.th/reg/"><img src="~/img/logo4.png" style="width:100%;box-shadow: 5px 5px 5px #d9d9d9" /></a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="panel panel-default outer" style="width:100%">
+                        <div class="panel-heading headerbar outer" style="margin: 0px 100px 10px 0px">
+                            <p style="font-size:25px;text-align:center;color:black"><strong>สัดส่วนหลักสูตรสาขา</strong></p>
+                        </div>
+                        <div class="panel-body text-justify chart-responsive">
+                            <div class="chart" id="chartContainer" style="height: 300px; position: relative;"></div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-6">
+                    <div class="panel panel-default outer col-md-6" style="width:100%">
+                        <div class="panel-heading headerbar">
+                            <p style="font-size:25px;text-align:center;color:black"><strong>สัดส่วนการเข้าทำงานของศิษย์เก่า</strong></p>
+                        </div>
+                        <div class="panel-body text-justify chart-responsive">
+                            <div class="chart" id="chartContainer2" style="height: 300px; position: relative;"></div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-
-    </div>
-</section>
-
-
+    </section>
+</body>
 
 <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
 <script type="text/javascript">
-
     window.onload = function () {
         var chart =
             new CanvasJS.Chart("chartContainer", {
