--- a/CSManagement/CSManagement/Views/Projects/IndexUser.cshtml
+++ b/CSManagement/CSManagement/Views/Projects/IndexUser.cshtml
@@ -1,8 +1,43 @@
 ﻿
 @{
-    ViewBag.Title = "IndexUser";
+    ViewBag.Title = "ผลงานนักศึกษา";
     Layout = "~/Views/Shared/_LayoutUser.cshtml";
 }
 
-<h2>IndexUser</h2>
 
+<div class="grid-container">
+    <div class="container">
+        <div class="col-lg-8 col-md-12 col-sm-12 item1">
+            <div class="panel panel-default outer" style="width:95%;margin: 0px 100px 10px 0px">
+                <div class="panel-heading headerbar">
+                    ผลงานนักศึกษา
+                </div>
+                <div class="panel-body text-justify">
+                    <img class="d-block img-fluid" src="~/imgSlideShow/present1.png" width="600" height="400">
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<p class="page-header text-center" style="font-size:40px"><i class="fa fa-star"></i>ผลงานนักศึกษา<i class="fa fa-star"></i></p>
+<div class="row">
+    <div class="col-md-4">
+        <div class="box box-widget widget-user-2">
+            <div class="widget-user-header bg-yellow">
+                <div class="widget-user-image">
+                    <img class="img-circle" img src="~/img/icons8-cat-profile-64.png" />
+                </div><h3 class="widget-user-username" style="letter-spacing:0px">นางสาวญาณี วงค์ตันฮวด</h3>
+                <h5 class="widget-user-desc">จัดการข้อมูลสาขาวิทยาการคอมพิวเตอร์</h5>
+            </div>
+            <div class="box-footer no-padding">
+                <ul class="nav nav-stacked">
+                    <li><a href="#">เว็บไซต์<span class="pull-right badge bg-blue">เข้าชม</span></a></li>
+                    <li><a href="#">รูปเล่ม<span class="pull-right badge bg-aqua">เข้าชม</span></a></li>
+                    <li><a href="#">วีดีโอ<span class="pull-right badge bg-green">เข้าชม</span></a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
